syntax = "proto3";

option go_package = "./proto";

service BattleService {
  rpc BattleStream (stream PokemonUpdate) returns (stream BattleStatus);
}

message PokemonUpdate {
  string id = 1;
  string name = 2;
  double x = 3;
  double y = 4;
  int32 hp = 5;
  string action = 6;
  string target_id = 7;
  int64 timestamp = 8; 
}

message BattleStatus {
  repeated PokemonUpdate pokemons = 1;
}
